--- a/sdss-website/src/app/globals.css
+++ b/sdss-website/src/app/globals.css
@@ -276,12 +276,13 @@ body {
   overflow-x: hidden;
 }
 
+.card-width {
+  width: 37vw;
+  height: 23vh;
+}
 
-@media (max-width: 768px) {
-  .card-height {
-    height: 32vh; 
-  }
-
+.card-mobile {
+  height: 32vh; 
 }
 
 .about-us {
